--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.0.2",
+    "@reduxjs/toolkit": "^2.2.5",
     "expo": "~50.0.13",
     "expo-font": "~11.10.3",
+    "expo-image": "~1.10.6",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
     "expo-splash-screen": "~0.26.4",
@@ -33,10 +35,12 @@
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-toast-notifications": "^3.4.0",
     "react-native-web": "~0.19.6",
-    "yup": "^1.4.0",
-    "expo-image": "~1.10.6"
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
