--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.0.2",
     "@reduxjs/toolkit": "^2.2.5",
+    "@tanstack/react-query": "^5.45.1",
     "dayjs": "^1.11.11",
     "expo": "~50.0.13",
     "expo-font": "~11.10.3",
